<resources>
    <string name="app_name">BookStore</string>
    <string name="book_title">Title:</string>
    <string name="hint_book_title">Title of the book (required)</string>
    <string name="book_price">Price:</string>
    <string name="hint_book_price">Price of the book (required)</string>
    <string name="book_quantity">Quantity:</string>
    <string name="hint_book_quantity">Quantity (required)</string>
    <string name="book_supplier">Supplier:</string>
    <string name="hint_book_supplier">Name of the supplier</string>
    <string name="book_supplier_phone">Phone:</string>
    <string name="hint_book_supplier_phone">Phone of the supplier</string>
    <string name="sale_button">Sale</string>
    <string name="increment_quantity">+</string>
    <string name="decrement_quantity">-</string>
    <string name="order_button">Order</string>
    <string name="editor_insert_book_failed">Error with saving the book</string>
    <string name="editor_insert_book_success">Book saved successfully</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_books">Delete All Books</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <string name="editor_activity_title_add_book">Add a Book</string>
    <string name="empty_view_title_text">It\'s a bit lonely here…</string>
    <string name="empty_view_subtitle_text">Get started by adding a book</string>
    <string name="delete_all_books_successful">All books deleted</string>
    <string name="editor_update_book_failed">Error with updating the book</string>
    <string name="editor_update_book_successful">Book updated</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit the editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <string name="delete_all_books_failed">Error with deleting all books</string>
    <string name="delete_all_dialog_msg">Delete all books?</string>
    <string name="sale_update_failure">Error with updating book sale</string>
    <string name="sale_update_success">Sale updated</string>
    <string name="book_title_invalid">Please insert a title</string>
    <string name="book_price_invalid">Please insert a price</string>
    <string name="book_quantity_invalid">Please insert a quantity</string>
    <string name="increased_quantity">Book quantity increased by 1</string>
    <string name="decreased_quantity">Book quantity decreased by 1</string>
    <string name="out_of_stock">Book is out of stock</string>
    <string name="call_permission_denied">Permission denied</string>
    <string name="list_item_qty_label">Qty:</string>
    <string name="list_item_price_label">Price:</string>
    <string name="book_supplier_invalid">Please insert a supplier</string>
    <string name="book_phone_invalid">Please insert a phone number</string>
</resources>
