<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the Book Editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EditorActivity">

    <!-- NAME -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label: Book name -->
        <TextView
            style="@style/LabelStyle"
            android:text="@string/product_name" />

        <!-- Field: Book name -->
        <EditText
            android:id="@+id/edit_book_name"
            style="@style/FieldStyle"
            android:hint="@string/hint_book_name"
            android:inputType="textCapSentences" />

    </LinearLayout>

    <!-- PRICE -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label: Book price -->
        <TextView
            style="@style/LabelStyle"
            android:text="@string/book_price" />

        <!-- Field: Book price -->
        <EditText
            android:id="@+id/edit_book_price"
            style="@style/FieldStyle"
            android:hint="@string/hint_book_price"
            android:inputType="number" />

    </LinearLayout>

    <!-- QUANTITY -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label: Book quantity -->
        <TextView
            style="@style/LabelStyle"
            android:text="@string/book_quantity" />

        <!-- Field: Book quantity -->
        <EditText
            android:id="@+id/edit_book_quantity"
            style="@style/FieldStyle"
            android:hint="@string/hint_book_quantity"
            android:inputType="number" />

    </LinearLayout>

    <!-- SUPPLIER'S NAME  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label: Book supplier name -->
        <TextView
            style="@style/LabelStyle"
            android:text="@string/book_supplier" />

        <!-- Field: Book supplier name -->
        <EditText
            android:id="@+id/edit_book_supplier"
            style="@style/FieldStyle"
            android:hint="@string/hint_book_supplier"
            android:inputType="textCapSentences" />

    </LinearLayout>

    <!-- SUPPLIER'S PHONE -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label: Book supplier phone -->
        <TextView
            style="@style/LabelStyle"
            android:text="@string/book_supplier_phone" />

        <!-- Field: Book supplier phone -->
        <EditText
            android:id="@+id/edit_book_supplier_phone"
            style="@style/FieldStyle"
            android:hint="@string/hint_book_supplier_phone"
            android:inputType="phone" />

    </LinearLayout>

</LinearLayout>